Adjusts on indexRoutes.js and users/userForm.hbs

--- a/views/users/userForm.hbs
+++ b/views/users/userForm.hbs
@@ -29,7 +29,7 @@
                     <div class="form-group">
                         <label for="user">Nome de usuário</label>
                         <input type="text" class="form-control" name="user" id="user" 
-                            placeholder="Usuários" 
+                            placeholder="Usuário" 
                             {{#if updateForm}} value="{{user.user}}" {{/if}} 
                             {{#if deleteForm}} value="{{user.user}}" readonly{{/if}}>
                     </div>
