Add missing stickers info on progress page and modal, adjusts on body-parser config

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -496,7 +496,8 @@ button:hover {
     opacity: 0.8 !important;
 }
 
-.code-pre-album-title {
+.code-pre-album-title, 
+.code-pre-album-qtdefaltantes {
     white-space: initial;
 }
 
