Some adjusts on badges

--- a/views/collections/collections.hbs
+++ b/views/collections/collections.hbs
@@ -21,13 +21,13 @@
                             <li class="nav-item">
                                 <a href="" data-target="#em-progresso" data-toggle="tab" class="nav-link small text-uppercase active">
                                     Em Progresso
-                                    <span class="badge badge-primary">{{#length progressCollections}}{{/length}}</span>
+                                    <span class="badge badge-info">{{#length progressCollections}}{{/length}}</span>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a href="" data-target="#completas" data-toggle="tab" class="nav-link small text-uppercase ">
                                     Completas
-                                    <span class="badge badge-primary">{{#length fullCollections}}{{/length}}</span>
+                                    <span class="badge badge-info">{{#length fullCollections}}{{/length}}</span>
                                 </a>
                             </li>
                         </ul>
